@@ -70,11 +70,12 @@ class_type LabelObject, { class => 'WebService::PivotalTracker::Label' };
 class_type LWPObject, { class => 'LWP::UserAgent' };
 
 declare MD5Hex,
-    as Str,
+    as Defined,
     where {m/^[0-9a-f]{32}$/i},
     inline_as {
     $_[0]->parent->inline_check( $_[1] ) . " && $_[1] =~ m/^[0-9a-f]{32}\$/i"
-    };
+}
+message {'token does not stringify to an MD5 string'};
 
 class_type PersonObject, { class => 'WebService::PivotalTracker::Person' };
 
