@@ -3,8 +3,10 @@ use warnings;
 
 use lib 't/lib';
 
+use Secret ();
 use Test2::Bundle::Extended;
 use Test2::Plugin::NoWarnings;
+use Test::LWP::UserAgent ();
 use Test::UA qw( ua );
 
 use WebService::PivotalTracker;
@@ -60,5 +62,52 @@ is(
     },
     'got expected object'
 );
+
+my $token = 'e99a18c428cb38d5f260853678922e03';
+my @tests = (
+    {
+        description => 'string token',
+        token       => $token,
+    },
+    {
+        description => 'object token',
+        token       => Secret->new($token),
+    },
+);
+for my $test (@tests) {
+    subtest $test->{description} => sub {
+        my $ua = Test::LWP::UserAgent->new;
+        $ua->map_response(
+            sub {
+                my $request = shift;
+                return $request->header('X-TrackerToken') eq $token;
+            },
+            HTTP::Response->new('500'),
+        );
+
+        like(
+            dies {
+                WebService::PivotalTracker->new(
+                    token => $test->{token},
+                    ua    => $ua,
+                )->story( story_id => 120292647 );
+            },
+            qr/Internal Server Error/,
+            'hit correct code path',
+        );
+    };
+}
+
+my $ex = dies {
+    WebService::PivotalTracker->new(
+        token => 'foo',
+    );
+};
+like(
+    $ex,
+    qr/token does not stringify/,
+    'invalid token is rejected and is not in exception',
+);
+unlike( $ex, qr/\Q$token/, 'token itself is not in the exception' );
 
 done_testing();
